# rag-engine

./: .gitignore  AI_ASSISTANT_INTEGRATION.md  BLOAT_REDUCTION.md  COMPREHENSIVE_TEST_RESULTS_SUMMARY.md  CONVERSATIONAL_ROUTING_UI_COMPLETION_SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENHANCED_API_GUIDE.md  ENHANCED_PROMPTING_COMPLETION_SUMMARY.md  ENTERPRISE_ROADMAP.md  FRIENDS_DEMO.md  HONEST_PROJECT_ASSESSMENT.md  INSTANT_DEMO.md  LICENSE  PRODUCTION_INTEGRATION_COMPLETE.md  PRODUCTION_TESTING_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_DEMO_SETUP.md  README.md  SOLO_DEVELOPER_ENTERPRISE_ROADMAP.md  TECHNICAL_EXCELLENCE_ROADMAP.md  WEEK_1_COMPLETION_STATUS.md  WEEK_1_FINAL_COMPLETION_STATUS.md  ai_setup.bat  debug_base_api.py  docker-compose.demo.yml  docker-compose.production.yml  docker-compose.yml  instant_demo.bat  nginx.conf  pyproject.toml  pytest.ini  quick_setup.bat  rag-engine-copilot-instructions.md  rag_engine.db  rag_engine_design.md  requirements-cloud.txt  requirements-core.txt  requirements-full.txt  (+11 more)
.github/: copilot-instructions.md
archive/: CONVERSATIONAL_ROUTING_FINAL_COMPLETION.md  FINAL_CLEANUP_SUMMARY.md  README_NEW.md  RESTRUCTURING_COMPLETION_SUMMARY.md  RESTRUCTURING_PLAN.md  quick_setup.bat  validate_restructuring.py
config/: production.json
configs/: config.json  enhanced_production.json  example_config.json  example_config.yml  production.json
docker/: .env.example  Dockerfile.production  docker-compose.production.yml  docker-compose.yml  entrypoint.sh
docs/: README.md  configuration.md  orchestration.md
(+189 files in other folders)
